Remove find bar focus redirection on mouse events.

Pressing next/previous buttons shouldn't change focus.
Focus was redirected to the textfield for Issue 524373.
That defect is no longer reproducible on ToT @ #400257.

Update and enable the interactive ui test.

BUG=621050,584043,524373
TEST=CTRL+F, 'a', TAB to focus previous button, touch/click next button, focus remains on previous button.
R=pkasting@chromium.org

Review-Url: https://codereview.chromium.org/2078953003
Cr-Commit-Position: refs/heads/master@{#401079}

Former-commit-id: 098645c6ee78757f03819207645ff151b8edf01d